[package]
name = "repercussion"
version = "0.1.0"
edition = "2021"
authors = ["prettyroseslover"]
description = "Repercussion Module for cgjail"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"

[dependencies.pyo3]
version = "0.21.2"
features = ["auto-initialize"]
